--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- google fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i">
   </head>
 
   <body>
@@ -29,15 +32,24 @@
     <!-- ----------------------------------------------------------------------- -->
 
     <main class="site-main">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <!-- -------------------------- Start Banner Area -------------------------- -->
       <section class="site-banner">
         <div class="container">
           <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-12 site-title">
               <div class="site-title-content">
-                <h3 class="title-text" style="color:#170C6A;">S V NIKISH KUMAR</h3>
-                <h1 class="title-text text-uppercase" style="color:#2A0523;">Amrita Viswavidyapeetam</h1>
-                <h4 class="title-text text-uppercase" style="color:#2A0523;">ML practioner</h4>
+                <h3 class="title-text" style="color:#09fbd3;">S V NIKISH KUMAR</h3>
+                <br>
+                <h1 class="title-text text-uppercase" style="color:#037a90;">Amrita Viswavidyapeetam</h1>
+                <br>
+                <h4 class="title-text text-uppercase" style="color:#037a90;">ML practioner</h4>
+                <br>
                 <div class="side-buttons">
                   <div class="d-flex flex-row flex-wrap mb-5">
                     <button
@@ -61,6 +73,15 @@
           </div>
         </div>
       </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
       <!-- --------------------------- End Banner Area --------------------------- -->
 
       <!-- ----------------------------- About Area ------------------------------ -->
@@ -68,16 +89,29 @@
         <div class="container-fluid">
           <div class="row">
             <div class="about-title">
-              <h2 class="text-uppercase pt-5">
-                <span style="color:#170C6A;">"Any sufficiently</span>
-                <span style="color:#170C6A;">advanced technology is</span>
-                <span style="color:#170C6A;">equivalent to magic"</span>
+              <h2 class="text-uppercase text-center pt-5">
+                <span style="color:#09fbd3;">“Any sufficiently</span>
+                <span style="color:#09fbd3;">advanced technology is</span>
+                <span style="color:#09fbd3;">equivalent to magic”</span>
               </h2>
-              
+              <div class="paragraph py-4 mx-auto text-justify">
+                <p class="para">
+                 has always been close to my heart.
+                 I have a tremendous passion towards technology and i'm seeking for a suitable position in your esteemed organisation which results towards my personal professional and organisational growth.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
       <!-- ----------------------------- End About Area ------------------------------ -->
       <!-- ----------------------------- non technical me ---------------------------- -->
        <section class="about-area">
@@ -90,98 +124,216 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 about-title text-center">
               <h2 class="text-uppercase pt-5">
-                <span style="color:#170C6A;">ABOUT ME</span>
+                <span style="color:#09fbd3;">ABOUT ME</span>
               </h2>
               <div class="paragraph py-4 mx-auto text-justify">
                 <p class="para">
-                 I am an Active sports person with a profound intrest in weight lifting and power lifting, and have won medals for the same.
-                 I was also a part of the handball team in my university. I am personally a practical person with a good exposure to different working conditions and mental states. I believe I can make myself productive in all kinds of situation and encourage my fellow mates to do the same. I work well as an induvidual and as a team and I believe personality development is as important as professional development.  
+                 I'm Nikish Kumar S V and I am a B.Tech Computer Science And Engineering graduate from Amrita Vishwa Vidyapeetham  Coimbatore (2021 batch). My skills include Python, Machine Learning, Deep Learning, Firebase Android Application development.As a student I have participated and led different teams at various hackathons and project presentations around the country. I deeply care about application oriented software development and have been developing my skills for the past three years.  
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
 
       <!-- -----------------------------end of non technical me ---------------------- -->
+      <div class="about-title">
+              <h1 class="text-uppercase text-center pt-5">
+                <span style="color:#09fbd3;">PROJECTS</span>
+              </h1>
+      </div>
       <!-- -----------------------------experience area ------------------------------ -->
-
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <!-- --------------------------------project 1 --------------------------------- -->
       <section class="about-area">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-12">
-              <div style="padding-top: 3rem;">
-                <img src="img/tech.jpg" alt="" class="img-fluid class-img" />
+            <div style="padding:0;margin:0;" class="col-xl-6 col-lg-6 col-md-12">
+              <div class="banner-image" style="padding:0;margin:0;">
+                <img src="img/ayush.jpeg" alt="" class="class-img" />
               </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 about-title text-center">
-              <h2 class="text-uppercase pt-5">
-                <span style="color:#170C6A;">"Simplicity is about</span>
-                <span style="color:#170C6A;">subtracting the obvious and</span>
-                <span style="color:#170C6A;">adding the meaningful."</span>
-              </h2>
+              <h5 class="text-uppercase pt-5">
+                <span style="color:#09fbd3;">AYUSH</span>
+              </h5>
               <div class="paragraph py-4 mx-auto text-justify">
-                <p class="para">
-                 As a student, I have participated and led different teams at various hackathons and project presentations around the country. I have also <b>interned at</b> an organization previously, namely <b>Intelliasiasoft Pvt Ltd at Chennai</b>. I deeply care about application-oriented software development and have been developing my skills for the past 3 years. I am a fast learner and am also thrilled at the prospect of being able to learn and work with many of the technologies/skills listed against your role.
+                <p class="para" style="padding:0;margin:0;">
+                 This app is developed using the latest web technologies aiming to 
+                  be minimalistic and user-friendly. It has a Ayurvedic hospital locator and videos section self knowledge . It will also be deployed in AIIA servers for 
+                  commercialization purpose.  
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- --------------------------------end of experience area ------------------------ -->
+      <!-- ------------------------------project 1 end ----------------------------- -->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <!-- --------------------------------project 2 --------------------------------- -->
       <section class="about-area">
         <div class="container-fluid">
           <div class="row">
-            <div class="about-title">
-              <h2 class="text-uppercase pt-5">
-                <span style="color:#170C6A;">“For the things we,</span>
-                <span style="color:#170C6A;">have to learn before we can do them,</span>
-                <span style="color:#170C6A;">we learn by doing them.”</span>
-              </h2>
+            <div class="col-xl-6 col-lg-6 col-md-12 about-title text-center">
+              <h5 class="text-uppercase pt-5">
+                <span style="color:#09fbd3;">SMART WAREHOUSE</span>
+              </h5>
               <div class="paragraph py-4 mx-auto text-justify">
                 <p class="para">
-                 <b>A very broad insight on the projects I have worked with</b>
+                  Supreme - ML/Blockchain-based Food warehouse management system. A food warehouse management system that uses blockchain to store records and innovate ML-based features like Expiry Prediction, Fire Detection to reduce food wastage.  
                 </p>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12" style="padding:0;margin:0;">
+              <div class="banner-image " style="padding:0;margin:0;">
+                <img src="img/BC-warehouse.jpeg" alt="" class="class-img" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ------------------------------project 2 end ----------------------------- -->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <!-- --------------------------------project 3 --------------------------------- -->
+      <section class="about-area">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12" style="padding:0;margin:0;">
+              <div class="banner-image" style="padding:0;margin:0;">
+                <img src="img/Ambrosia.jpeg" alt="" class="class-img" />
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 about-title text-center">
+              <h5 class="text-uppercase pt-5">
+                <span style="color:#09fbd3;">AMBROSIA-Mid Day Meals Managements</span>
+              </h5>
+              <div class="paragraph py-4 mx-auto text-justify">
                 <p class="para">
-                  <li> Supreme - ML/Blockchain-based Food warehouse management system. A food warehouse management system that uses blockchain to store records and innovate ML-based features like Expiry Prediction, Fire Detection to reduce food wastage.
-                  </li>
-                  <li>
-                  Cloud Based Data Integrity model for minimal human intervention using smart contracts. The project aims at an automated system that requires minimal intervention and increased scalability and security levels in Mid-Day Meals scheme.
-                </li>
-                <br>
-                <p class="para"><b>FOR FURTHER ELUCIDATION, TAKE A LOOK AT MY RESUME"</b></p>
+                 This app is developed using the latest web technologies aiming to 
+                  be minimalistic and user-friendly. It has a Ayurvedic hospital locator and videos section self knowledge . It will also be deployed in AIIA servers for 
+                  commercialization purpose.  
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="d-flex flex-row flex-wrap mb-5">
-                    <button
-                      type="button"
-                      class="btn button primary-button mr-4 text-uppercase"
-                      onclick="window.open('https://drive.google.com/file/d/106nRzMtrBYAm0ZKOvqSF2Z264DGQPMEn/view?usp=drivesdk')"
-                    >
-                      Resume
-                    </button>
-                  </div>
       </section>
-    </main>
+      <!-- ------------------------------project 3 end ----------------------------- -->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <!-- --------------------------------end of experience area ------------------------ -->
+
 
     <!-- ----------------------------------------------------------------------- -->
     <!--                              End Main Area                              -->
     <!-- ----------------------------------------------------------------------- -->
 
     <!-- ----------------------------------------------------------------------- -->
-    <!--                              Start Footer                               -->
+    <!--                              contact Footer                               -->
     <!-- ----------------------------------------------------------------------- -->
-    <footer>
-      <div>
-        
-      </div>
-    </footer>
+    <div class="about-title">
+              <h1 class="text-uppercase text-center pt-5">
+                <span style="color:#09fbd3;visibility: visible;">Wanna colab on a project with me ? Contact Me</span>
+              </h1>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="container text-center">
+        <div class="about-title ">
+              <h4 class="text-uppercase text-center pt-5">
+                <span style="color:#09fbd3;">CHECK OUT MY RESUME</span>
+              </h4>
+              <br>
+              <br>
+              <div>
+                    <button type="button" class="btn button primary-button mr-4 text-uppercase"
+                      onclick="window.open('https://drive.google.com/file/d/106nRzMtrBYAm0ZKOvqSF2Z264DGQPMEn/view?usp=drivesdk')">
+                      Resume
+                    </button>
+              </div>
+       </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="container text-center">
+        <div class="about-title ">
+              <h4 class="text-uppercase text-center pt-5">
+                <span style="color:#09fbd3;">follow me on</span>
+              </h4>
+              <br>
+              <br>
+       </div>
+    </div>
+    <div class="container" style="text-align: center;">
+            <ul style="padding:1em;">
+                <li id ="fb" style="display: inline;">
+                  <a href="https://github.com/nikish007" target="_blank">
+                    <img src="https://img.icons8.com/fluent/48/000000/github.png"></a>
+                </li>
+                <li id ="li" style="display:inline;">
+                  <a href="http://www.linkedin.com/in/nikishkumar" target="_blank">
+                    <img src="https://img.icons8.com/fluent/48/000000/linkedin-circled.png"></a>
+                </li>
+              </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <!-- ----------------------------------------------------------------------- -->
-    <!--                               End Footer                                -->
+    <!--                               contact Footer                                -->
     <!-- ----------------------------------------------------------------------- -->
 
     <!-- jquery 3.5.1 -->
