--- a/index.html
+++ b/index.html
@@ -244,9 +244,10 @@
               </h5>
               <div class="paragraph py-4 mx-auto text-justify">
                 <p class="para">
-                 This app is developed using the latest web technologies aiming to 
-                  be minimalistic and user-friendly. It has a Ayurvedic hospital locator and videos section self knowledge . It will also be deployed in AIIA servers for 
-                  commercialization purpose.  
+                 Cloud Based Data Integrity model for minimal human intervention using smart contracts. The project aims at
+                  an automated system that requires minimal intervention and increased scalability and security levels in Mid-Day
+                  Meals scheme.
+
                 </p>
               </div>
             </div>
