--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <div class="col-xl-6 col-lg-6 col-md-12 site-title">
               <div class="site-title-content">
                 <h3 class="title-text" style="color:#09fbd3;">S V NIKISH KUMAR</h3>
-                <h1 class="title-text text-uppercase" style="color:#037a90;">Amrita Viswavidyapeetam</h1>
-                <h4 class="title-text text-uppercase" style="color:#037a90;">ML practioner</h4>
+                <h1 class="title-text text-uppercase" style="color:#037a90;">Texas Instruments</h1>
+                <h4 class="title-text text-uppercase" style="color:#037a90;">Data Scientist</h4>
                 <div class="side-buttons">
                   <div class="d-flex flex-row flex-wrap mb-5">
                     <button
                       type="button"
                       class="btn button primary-button mr-4 text-uppercase"
-                      onclick="window.open('https://drive.google.com/file/d/106nRzMtrBYAm0ZKOvqSF2Z264DGQPMEn/view?usp=drivesdk')"
+                      onclick="window.open('https://drive.google.com/file/d/10I1Q5B4E365zdfqaN_aL2uuXzbYONB-s/view?usp=share_link')"
                     >
                       Resume
                     </button>
@@ -89,7 +89,7 @@
               </h2>
               <div class="paragraph py-4 mx-auto text-justify">
                 <p class="para">
-                 I'm Nikish Kumar S V and I am a B.Tech Computer Science And Engineering graduate from Amrita Vishwa Vidyapeetham  Coimbatore (2021 batch). My skills include Python, Machine Learning, Deep Learning, Firebase Android Application development.As a student I have participated and led different teams at various hackathons and project presentations around the country. I deeply care about application oriented software development and have been developing my skills for the past three years.  
+                 I'm Nikish Kumar S V and I am a B.Tech Computer Science And Engineering graduate from Amrita Vishwa Vidyapeetham Coimbatore (2021 batch). My skills include Python, Machine Learning, Deep Learning. I'm currently working as an Application Developer in Texas Instruments for the past 2 years, I have worked in Order Fullfillment and Data Analytics wings. As a student I have participated and led different teams at various hackathons and project presentations around the country. I deeply care about application oriented software development and have been developing my skills for the past years.  
                 </p>
               </div>
             </div>
@@ -229,7 +229,7 @@
               <br>
               <div>
                     <button type="button" class="btn button primary-button mr-4 text-uppercase"
-                      onclick="window.open('https://drive.google.com/file/d/106nRzMtrBYAm0ZKOvqSF2Z264DGQPMEn/view?usp=drivesdk')">
+                      onclick="window.open('https://drive.google.com/file/d/10I1Q5B4E365zdfqaN_aL2uuXzbYONB-s/view?usp=share_link')">
                       Resume
                     </button>
               </div>
